# discotec

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt
.github/workflows/: hello-world.yml
src/audio_playback/: CMakeLists.txt  audio_device.cpp  audio_file.cpp  audio_player.cpp
src/audio_playback/include/audio_playback/: audio_device.h  audio_file.h  audio_player.h
src/audio_visualizer/: CMakeLists.txt  main.cpp  shaders.h
src/gl_abstractions/: CMakeLists.txt  renderer.cpp  shaders.cpp
src/gl_abstractions/include/gl_abstractions/: mesh.h  renderer.h  shaders.h
src/qt_abstractions/: CMakeLists.txt  gl_window.cpp
src/qt_abstractions/include/qt_abstractions/: gl_window.h
